shift the 5 day to fit the history box correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ root {
 
 #forecast {
     position: absolute;
-    left:20%;
+    left:30%;
 }
 
 
